--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,10 @@
     <%= @user.name %>
   </h1>
 
+  <div class="buffer-both">
+    <%= link_to "Редактировать профиль", edit_user_path(@user) if current_user == @user %>
+  </div>
+
   <div class="user-image-div">
     <%= image_tag user_avatar(@user), class: "user-image", alt: "Фото" %>
   </div>
@@ -10,9 +14,6 @@
   <h2 class="title-small buffer-both">
     @<%= @user.username %>
   </h2>
-  <h3 class="title-small buffer-both">
-    <%= @number_of_questions %> <%= inclination @number_of_questions,"вопрос", "вопроса", "вопросов" %>
-  </h3>
 
   <div class="user-ask-button container text-center">
     <%= link_to "Спроси меня", "", class: "button button-light", id: "ask-button" %>
