--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -22,6 +22,17 @@
   font-size: 16px;
 }
 
+.form-color-field {
+  width: 100%;
+  max-width: 100%;
+  height: 36px;
+  box-sizing: border-box;
+  border: 1px solid #00b6ad;
+  border-radius: 3px;
+  font-size: 16px;
+  margin-bottom: 0px;
+}
+
 .form-action {
   margin-top: 20px;
 }
