--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,23 +23,23 @@
       <%# С помощью методов label и text_field у объекта f мы создаем теги %>
       <%# <label ... > и <input type="text" ... > с нужными атрибуами %>
       <div class="form-field">
-        <%= f.label "Никнейм", class: "form-label" %>
+        <%= f.label :username, class: "form-label" %>
         <%= f.text_field :username, class: "form-text-field" %>
       </div>
 
       <%# Поступаем аналогично для других полей %>
       <div class="form-field">
-        <%= f.label "Имя", class: "form-label" %>
+        <%= f.label :name, class: "form-label" %>
         <%= f.text_field :name, class: "form-text-field" %>
       </div>
 
       <div class="form-field">
-        <%= f.label "URL вашей аватарки", class: "form-label" %>
+        <%= f.label :avatar_url, class: "form-label" %>
         <%= f.text_field :avatar_url, class: "form-text-field" %>
       </div>
 
       <div class="form-field">
-        <%= f.label "Цвет фона вашей аватарки", class: "form-label" %>
+        <%= f.label :profile_color, class: "form-label" %>
         <%= f.color_field :profile_color, class: "form-color-field" %>
       </div>
 
@@ -48,12 +48,12 @@
       </div>
 
       <div class="form-field">
-        <%= f.label "Пароль", class: "form-label" %>
+        <%= f.label :password, class: "form-label" %>
         <%= f.password_field :password, class: "form-text-field" %>
       </div>
 
       <div class="form-field">
-        <%= f.label "Пароль еще раз", class: "form-label" %>
+        <%= f.label :password_confirmation, class: "form-label" %>
         <%= f.password_field :password_confirmation, class: "form-text-field" %>
       </div>
 
