--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,7 +1,7 @@
 <div class="question">
   <div class="question-content">
     <div class="question-text text-lead">
-      <%= question.text %>
+      <%= text_with_hashtag_link(question.text) %>
     </div>
     <div class="question-text text-lead question-author">
     <% if question.author.present?%>
@@ -11,7 +11,7 @@
 
     <% if question.answer.present? %>
       <div class="question-answer text-lead">
-        <%= question.answer %>
+        <%= text_with_hashtag_link(question.answer) %>
       </div>
     <% end %>
 
